--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -229,7 +229,6 @@ to {opacity: 1}
 
 .control-form{
   margin: 5px 0px 5px
-
 }
 
 .label-general{
@@ -256,5 +255,78 @@ to {opacity: 1}
   display: flex;
   align-items: center;
 }
+
+/**** Detail ****/
+.main-detail{
+  margin: 140px auto 70px;
+  width:95%;
+}
+
+.add-fav{
+  
+  color:#90AFC5
+}
+
+.detail-title{
+  text-align: center;
+}
+
+.detail-name{
+  color:#90AFC5
+}
+
+.detail-location i{
+  margin: 0px 2px
+}
+
+.img-container{
+  text-align:center
+}
+
+.img-main{
+  border: 1px solid #B7B8B6;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgb(172, 171, 171);
+  margin: 20px 10px    
+}
+
+.detail-resume{
+  display: flex;
+  justify-content: space-around
+}
+
+.detail-box{
+  text-align: center;
+}
+
+.item-info{
+  color: #6AB187;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.description-box{
+  margin:20px;
+  text-align: justify
+}
+
+.tip-box{
+  border: 1px solid #20948B;
+  margin:10px 40px
+}
+
+.tip-box h2{
+  color: #20948B;
+  text-align: center;
+  padding: 10px 0px 2px
+}
+
+.tip-box p{
+  text-align: justify;
+  padding: 15px
+}
+
+/* Gallery */
+
 
 @media screen and (min-width: 415px) {}
