--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,5 +1,15 @@
-<footer class= "footer">
+<footer class= "footer-mobile-tablet-container">
     <section class="footer-mobile">
+        <a><i class="fa-solid fa-house"></i></a>            
+        <a><i class="fa-solid fa-magnifying-glass"></i></a>
+        <a><i class="fa-solid fa-plus"></i></a>
+        <a><i class="fa-solid fa-heart"></i></a>            
+        <a><i class="fa-solid fa-user"></i></a>
+    </section>
+</footer>
+
+<footer class= "footer-laptop-desktop-container">
+    <section class="footer-desktop">
         <a><i class="fa-solid fa-house"></i></a>            
         <a><i class="fa-solid fa-magnifying-glass"></i></a>
         <a><i class="fa-solid fa-plus"></i></a>
