--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,7 +1,15 @@
 <header>
     <section class= "top-menu">
         <div class="logo"><a href= "/"><img src="../img/logo.png" class="mobile"></a></div>
-        <div class="search-bar"><input class= "searcher" placeholder= "¿Qué estás buscando?"></div>                
-        <div class="icon-menu"><a><i class="fa-solid fa-ellipsis-vertical"></i></a></div>
+        <div class="search-bar"><input class= "searcher" placeholder= "¿Qué estás buscando?"></div>       
+        <div class="dropdown">
+            <div class="icon-menu"><a><i class="fa-solid fa-ellipsis-vertical"></i></a></div>
+            <div class="dropdown-content">
+                <a href="/users">Registrarme</a>
+                <a href="#">Log In</a>
+                <a href="#">Últimos Treks</a>
+            </div>
+
+        </div>
     </section> 
 </header>
