--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -14,12 +14,12 @@
             </div>
 
             <div class="control-form">
-                <label class="label-general">Provincia</label>
+                <label class="label-general">Correo electrónico</label>
                 <input class="input-form" type="email" name="email" placeholder="Ej. cosmefulanito@gmail.com">
             </div>
 
             
-            <div class="control-button"><button type="submit" class="button">Enviar</button></div>
+            <div class="control-button"><button type="submit" class="button">Registrarme</button></div>
             <div class="control-button"><button type="reset" class="cancel-button">Cancelar</button></div>
         </form>
 
